fix:在.gitignore里增加了models文件夹

--- a/src/rmcv_bringup/config/balance1/node_params.yaml
+++ b/src/rmcv_bringup/config/balance1/node_params.yaml
@@ -26,7 +26,7 @@
 /rm_serial_driver:
   ros__parameters:
     device_name: /dev/ttyUSB0
-    baud_rate: 2000000
+    baud_rate: 921600
     flow_control: none
     parity: none
     stop_bits: "1"
