--- a/src/rm_utils/package.xml
+++ b/src/rm_utils/package.xml
@@ -12,6 +12,7 @@
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
   <depend>tf2_ros</depend>
+  <depend>tf2_eigen</depend>
   <depend>rm_interfaces</depend>
   <depend>sensor_msgs</depend>
   <depend>eigen</depend>
