--- a/src/rm_utils/CMakeLists.txt
+++ b/src/rm_utils/CMakeLists.txt
@@ -5,6 +5,8 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+set(-DCMAKE_BUILD_TYPE=Debug)
+
 # C++17
 set(CMAKE_CXX_STANDARD 17)
 add_compile_options(-O3)
