--- a/src/rm_utils/package.xml
+++ b/src/rm_utils/package.xml
@@ -13,6 +13,7 @@
   <depend>rclcpp_components</depend>
   <depend>tf2_ros</depend>
   <depend>tf2_eigen</depend>
+  <depend>std_msgs</depend>
   <depend>rm_interfaces</depend>
   <depend>sensor_msgs</depend>
   <depend>eigen</depend>
