--- a/src/rmcv_bringup/config/balance1/node_params.yaml
+++ b/src/rmcv_bringup/config/balance1/node_params.yaml
@@ -58,7 +58,7 @@
   ros__parameters:
     detection_name: detection_armor
     robot_name: rm_robot
-    enable_imshow: false
+    enable_imshow: true
     debug: true
     camera_name: "hkcam"
     target_frame: "odom"
@@ -71,11 +71,11 @@
     armor_ekf.filter_length: 10
     # enemy_ekf(自适应R/Q)
     enemy_ekf.P: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
-    enemy_ekf.R_XYZ: 0.0004
-    enemy_ekf.R_YAW: 0.005
+    enemy_ekf.R_XYZ: 0.0025
+    enemy_ekf.R_YAW: 0.029
     enemy_ekf.Q2_XYZ: 0.05
     enemy_ekf.Q2_YAW: 5.0
-    enemy_ekf.Q2_R: 80.0
+    enemy_ekf.Q2_R: 0.000001
     # 传统方法感知陀螺/前哨战相关参数
     census_period_min: 1.3
     census_period_max: 3.5
