加入了双装甲板观测的自瞄算法，只使用整车滤波的结果进行瞄准， 甩头打法的命中率大幅提高;但是无法稳定锁住中轴;平移目标不能完全跟上，还是需要速度补偿

--- a/src/rmcv_bringup/config/balance1/node_params.yaml
+++ b/src/rmcv_bringup/config/balance1/node_params.yaml
@@ -4,7 +4,7 @@
     robot_name: rm_robot
     sn: ""
     exposure_time: 3000.0
-    gain: 15.0
+    gain: 16.0
     offset_x: -1
     offset_y: -1
     roi_height: 640
@@ -16,7 +16,7 @@
     en_roi_height: 1024
     en_roi_width: 1024
     en_resize_640: true
-    frame_rate: 125.0
+    frame_rate: 200.0
 
 /rm_republish:
   ros__parameters:
@@ -26,7 +26,7 @@
 /rm_serial_driver:
   ros__parameters:
     device_name: /dev/ttyUSB0
-    baud_rate: 921600
+    baud_rate: 2000000
     flow_control: none
     parity: none
     stop_bits: "1"
@@ -80,9 +80,10 @@
     # CKF_Points without PnP
     enemy_ekf.R_XYZ: 0.0025
     enemy_ekf.R_YAW: 0.0029
-    enemy_ekf.Q2_XYZ: 900.0  #用急停的加速度估算出来的Q_XYZ,对平移目标跟踪效果较好
-    enemy_ekf.Q2_YAW: 900.0
+    enemy_ekf.Q2_XYZ: 400.0  #用急停的加速度估算出来的Q_XYZ,对平移目标跟踪效果较好
+    enemy_ekf.Q2_YAW: 100.0
     enemy_ekf.Q2_R: 0.01
+    enemy_ekf.predict_compensate: 1.6
 
     # enemy_ekf.Q2_XYZ: 0.05
     # enemy_ekf.Q2_YAW: 5.0
@@ -111,14 +112,14 @@
     # 运动状态判断
     rotate_thresh: 3.0                    #进入旋转状态阈值
     rotate_exit: 2.0                      #退出旋转状态阈值
-    high_spd_rotate_thresh: 5.0           #进入高速旋转状态阈值
-    high_spd_rotate_exit: 3.0             #退出高速旋转状态阈值
+    high_spd_rotate_thresh: 7.0           #进入高速旋转状态阈值
+    high_spd_rotate_exit: 5.0             #退出高速旋转状态阈值
     move_thresh: 1.0                      #进入移动状态阈值(目前移动小陀螺判断)
     move_exit: 0.5                        #退出移动状态阈值
     # 火控参数
     dis_thresh_kill: 5.2                  #普通步兵斩杀线距离（在dis_thresh_common内的慢速目标开启高射频）
     low_spd_thresh: 0.2                   #自动发射运动速度阈值
-    gimbal_error_dis_thresh: 0.03         #自动发弹阈值，限制云台误差的球面意义距离
+    gimbal_error_dis_thresh: 0.06         #自动发弹阈值，限制云台误差的球面意义距离
     gimbal_error_dis_thresh_old: 0.15     #自动发弹阈值，限制云台误差的球面意义距离
     residual_thresh: 0.0000001            #均值残差平方阈值判断发弹
     tangential_spd_thresh: 1.0            #切向速度阈值
@@ -134,8 +135,8 @@
     ballistic.params_found: true
     ballistic.yaw2gun_offset: 0.00
     # 分别五个值分别对应9，15，16，18，30弹速的弹道参数
-    ballistic.stored_yaw_offset: [0.0, 0.0, 0.0, 0.0, -0.0]
-    ballistic.stored_pitch_offset: [0.0, 0.0, 0.0, 0.0, -0.0]
+    ballistic.stored_yaw_offset: [0.0, 0.0, 0.0, 0.0, 0.6]
+    ballistic.stored_pitch_offset: [0.0, 0.0, 0.0, 0.0, -1.0]
     # ROS2目前不支持加载二维数组，传入string使用yaml-cpp处理
     # 分别五个值分别对应9，15，16，18，30弹速的发射装置与相机的偏移量
     ballistic.stored_offset_S: "[
