--- a/src/rmcv_bringup/config/balance1/node_params.yaml
+++ b/src/rmcv_bringup/config/balance1/node_params.yaml
@@ -104,6 +104,8 @@
     bound_limit: 30.0                     #过滤图像边缘的装甲板（单位为像素）
     aspect_limit_big: 1.6                 #当大装甲板处于40度时宽高比 公式m*sin(40)/n
     aspect_limit_small: 0.8               #当小装甲板处于40度时宽高比
+    rm_pnp_aspect_limit_big: 3.83         #使用约束pnp的宽高比       
+    rm_pnp_aspect_limit_small: 2.37       #使用约束pnp的宽高比        
     reset_time: 0.52                      #若在视野中消失 reset_time秒，认为目标丢失
     size_ratio_thresh: 1.8                #切换整车滤波跟踪装甲板的面积阈值/切换选择目标的面积阈值
     collimation: [320.0,320.0]            #二维图像上的准星
