--- a/src/rmcv_bringup/config/balance1/node_params.yaml
+++ b/src/rmcv_bringup/config/balance1/node_params.yaml
@@ -71,15 +71,12 @@
     armor_ekf.filter_length: 10
     # enemy_ekf(自适应R/Q)
     enemy_ekf.P: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
-    # CKF_PnP
-    # enemy_ekf.R_XYZ: 0.0025
-    # enemy_ekf.R_YAW: 0.0029
-    # enemy_ekf.Q2_XYZ: 900.0  #用急停的加速度估算出来的Q_XYZ,对平移目标跟踪效果较好
-    # enemy_ekf.Q2_YAW: 900.0
-    # enemy_ekf.Q2_R: 0.01
-    # CKF_Points without PnP
     enemy_ekf.R_XYZ: 0.0025
     enemy_ekf.R_YAW: 0.0029
+    # R_PYD, R_R未调好
+    enemy_ekf.R_PY: 0.0029
+    enemy_ekf.R_D: 1.0
+    enemy_ekf.R_R: 0.1
     enemy_ekf.Q2_XYZ: 400.0  #用急停的加速度估算出来的Q_XYZ,对平移目标跟踪效果较好
     enemy_ekf.Q2_YAW: 100.0
     enemy_ekf.Q2_R: 0.01
