自制PNP改回最早可用版本

--- a/src/rm_utils/CMakeLists.txt
+++ b/src/rm_utils/CMakeLists.txt
@@ -29,10 +29,10 @@ set(link ${OpenCV_LIBS} ${link})
 find_package(Eigen3 3.3 REQUIRED)
 set(link Eigen3::Eigen ${link})
 
-# Sophus
-find_package(Sophus REQUIRED)
-include_directories(${Sophus_INCLUDE_DIRS})
-set(link ${Sophus_LIBRARIES} ${link})
+# # Sophus
+# find_package(Sophus REQUIRED)
+# include_directories(${Sophus_INCLUDE_DIRS})
+# set(link ${Sophus_LIBRARIES} ${link})
 
 # find src
 file(GLOB_RECURSE src "src/*.cpp")
