加入了Gamma和数字增益的调节

--- a/src/rmcv_bringup/config/balance1/node_params.yaml
+++ b/src/rmcv_bringup/config/balance1/node_params.yaml
@@ -4,7 +4,9 @@
     robot_name: rm_robot
     sn: ""
     exposure_time: 3000.0
-    gain: 16.0
+    gain: 17.0
+    gamma: 0.5
+    digital_shift: 6.0
     offset_x: -1
     offset_y: -1
     roi_height: 640
