装甲版姿态先滤波再进观测器，可以抑制正对时的噪声，暂时取消带约束pnp

--- a/src/rm_detector/CMakeLists.txt
+++ b/src/rm_detector/CMakeLists.txt
@@ -25,16 +25,16 @@ set(link ${OpenCV_LIBS} ${link})
 find_package(Threads REQUIRED)
 set(link Threads::Threads ${link})
 
-# try to find CUDA
-find_package(CUDA OPTIONAL_COMPONENTS)
-if(${CUDA_FOUND} AND NOT FORCE_OPENVINO)
-    add_compile_options(-DTRT)
-    message(STATUS "TensorRT Mode")
-    set(TRT ON)
-else()
-    message(STATUS "OpenVINO Mode")
+# # try to find CUDA
+# find_package(CUDA OPTIONAL_COMPONENTS)
+# if(${CUDA_FOUND} AND NOT FORCE_OPENVINO)
+#     add_compile_options(-DTRT)
+#     message(STATUS "TensorRT Mode")
+#     set(TRT ON)
+# else()
+#     message(STATUS "OpenVINO Mode")
     set(TRT OFF)
-endif()
+# endif()
 
 if(TRT)
     set(include ${CUDA_INCLUDE_DIRS} ${include})
