--- a/src/enemy_predictor/package.xml
+++ b/src/enemy_predictor/package.xml
@@ -15,6 +15,7 @@
   <depend>eigen</depend>
   <depend>tf2_eigen</depend>
   <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
   <depend>visualization_msgs</depend>
   <depend>message_filters</depend>
   <depend>tf2_geometry_msgs</depend>
