--- a/src/rmcv_bringup/config/balance1/node_params.yaml
+++ b/src/rmcv_bringup/config/balance1/node_params.yaml
@@ -77,18 +77,13 @@
     yaw_kf.Q: 1.0
     yaw_kf.R: [0.0029]
 
-    # enemy_ekf(自适应R/Q)
-    enemy_ekf.P: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
-    enemy_ekf.R_XYZ: 0.0025
-    enemy_ekf.R_YAW: 0.0029
-    # R_PYD, R_R未调好
-    enemy_ekf.R_PY: 0.0029
-    enemy_ekf.R_D: 1.0
-    enemy_ekf.R_R: 0.1
-    enemy_ekf.Q2_XYZ: 400.0  #用急停的加速度估算出来的Q_XYZ,对平移目标跟踪效果较好
-    enemy_ekf.Q2_YAW: 100.0
-    enemy_ekf.Q2_R: 0.01
-    enemy_ekf.predict_compensate: 1.6
+    # enemy_kf
+    R_XYZ: 0.02
+    R_YAW: 0.06
+    Q2_XY: 0.02
+    Q2_DIS: 0.0002
+    Q2_Z: 0.03
+    Q2_YAW: 0.15
 
     # enemy_ekf.Q2_XYZ: 0.05
     # enemy_ekf.Q2_YAW: 5.0
