--- a/src/rmcv_bringup/config/balance2/node_params.yaml
+++ b/src/rmcv_bringup/config/balance2/node_params.yaml
@@ -71,13 +71,13 @@
     yaw_kf.Q: 1.0
     yaw_kf.R: [0.0029]
 
-    # enemy_ekf(自适应R/Q)
-    enemy_ekf.P: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
-    enemy_ekf.R_XYZ: 0.0004
-    enemy_ekf.R_YAW: 0.005
-    enemy_ekf.Q2_XYZ: 0.05
-    enemy_ekf.Q2_YAW: 5.0
-    enemy_ekf.Q2_R: 80.0
+    # enemy_kf
+    R_XYZ: 0.02
+    R_YAW: 0.06
+    Q2_XY: 0.02
+    Q2_DIS: 0.0002
+    Q2_Z: 0.03
+    Q2_YAW: 0.15
     # 传统方法感知陀螺/前哨战相关参数
     census_period_min: 1.3
     census_period_max: 3.5
