--- a/src/rmcv_bringup/config/balance1/node_params.yaml
+++ b/src/rmcv_bringup/config/balance1/node_params.yaml
@@ -79,9 +79,9 @@
 
     # enemy_kf
     R_XYZ: 0.0025
-    R_YAW: 0.0029
+    R_YAW: 0.029
     Q2_XY: 100.0
-    Q2_YAW: 30.0
+    Q2_YAW: 3.0
 
     # enemy_ekf.Q2_XYZ: 0.05
     # enemy_ekf.Q2_YAW: 5.0
@@ -117,6 +117,8 @@
     move_thresh: 1.0                      #进入移动状态阈值(目前移动小陀螺判断)
     move_exit: 0.5                        #退出移动状态阈值
     # 火控参数
+    change_armor_time_thresh: 0.1
+
     dis_thresh_kill: 5.2                  #普通步兵斩杀线距离（在dis_thresh_common内的慢速目标开启高射频）
     low_spd_thresh: 0.2                   #自动发射运动速度阈值
     gimbal_error_dis_thresh: 0.06         #自动发弹阈值，限制云台误差的球面意义距离
