开始整理联盟赛用的自瞄版本

--- a/src/rmcv_bringup/config/balance1/node_params.yaml
+++ b/src/rmcv_bringup/config/balance1/node_params.yaml
@@ -83,6 +83,8 @@
     R_YAW: 0.029
     Q2_XY: 100.0
     Q2_YAW: 3.0
+    standard_dis: 0.17
+    balance_dis: 0.2
 
     # enemy_ekf.Q2_XYZ: 0.05
     # enemy_ekf.Q2_YAW: 5.0
