--- a/src/rmcv_bringup/config/balance2/node_params.yaml
+++ b/src/rmcv_bringup/config/balance2/node_params.yaml
@@ -76,6 +76,8 @@
     R_YAW: 0.029
     Q2_XY: 100.0
     Q2_YAW: 3.0
+    standard_dis: 0.17
+    balance_dis: 0.2
     # 传统方法感知陀螺/前哨战相关参数
     census_period_min: 1.3
     census_period_max: 3.5
