--- a/src/rmcv_bringup/config/hero/node_params.yaml
+++ b/src/rmcv_bringup/config/hero/node_params.yaml
@@ -77,6 +77,8 @@
     R_YAW: 0.029
     Q2_XY: 1.0
     Q2_YAW: 3.0
+    standard_dis: 0.17
+    balance_dis: 0.2
     # 传统方法感知陀螺/前哨战相关参数
     census_period_min: 5.0
     census_period_max: 5.0
