--- a/src/rmcv_bringup/config/mai2/node_params.yaml
+++ b/src/rmcv_bringup/config/mai2/node_params.yaml
@@ -32,7 +32,7 @@
     
 /rm_serial_driver:
   ros__parameters:
-    device_name: /dev/ttyACM0
+    device_name: /dev/ttyUSB0
     baud_rate: 2000000
     flow_control: none
     parity: none
