--- a/src/rmcv_bringup/config/rudder/node_params.yaml
+++ b/src/rmcv_bringup/config/rudder/node_params.yaml
@@ -3,12 +3,12 @@
     camera_name: hkcam #同时也是Image消息名
     robot_name: rm_robot
     sn: ""
-    exposure_time: 4000.0
-    gain: 16.0
+    exposure_time: 2000.0
+    gain: 17.0
     offset_x: -1
     offset_y: -1
     gamma: 0.5
-    digital_shift: 3.0
+    digital_shift: 2.0
     roi_height: 640
     roi_width: 640
     en_exposure_time: 1000.0
@@ -65,7 +65,7 @@
   ros__parameters:
     detection_name: detection_armor
     robot_name: rm_robot
-    enable_imshow: true
+    enable_imshow: false
     debug: true
     camera_name: "hkcam"
     target_frame: "odom"
